--- a/index.html
+++ b/index.html
@@ -30,6 +30,41 @@
 
 </head>
 <body>
+    <header class="max-w-[1144px] mx-auto">
+        <!-- nav bar -->
+        <div class="navbar lg:grid grid-cols-3 md:bg-common-pink px-4 lg:px-12 lg:py-7 rounded-[600px] my-5 lg:my-12 lg:mx-0">
+            <div class="navbar-center hidden lg:flex p-0">
+                <ul class="menu menu-horizontal md:text-white md:text-lg p-0">
+                    <li><a class="px-0 mr-5">Home</a></li>
+                    <li><a class="px-0 mr-5">About Us</a></li>
+                    <li><a class="px-0 mr-5">Shop</a></li>
+                    <li><a class="px-0">All Fruits</a></li>
+                </ul>
+            </div>
+            <div class="navbar-start justify-between w-full lg:w-auto">     
+                <a class="normal-case text-xl flex gap-4 items-center">
+                    <img src="images/logo.png" alt="" class="w-7 md:w-[54px]">
+                    <h1 class="text-xl lg:text-[40px] font-bold md:text-white">Fruit Burst</h1>
+                </a>
+                <div class="dropdown dropdown-end">
+                    <label tabindex="0" class=" lg:hidden">
+                        <i class="fa-solid fa-bars fa-2x md:text-white  "></i>
+                    </label>
+                    <ul tabindex="0" class="menu menu-sm dropdown-content w-52 shadow bg-base-100 rounded-box">
+                        <li><a>Home</a></li>
+                        <li><a>About Us</a></li>
+                        <li><a>Shop</a></li>
+                        <li><a>All Fruits</a></li>
+                    </ul>
+                </div>
+            </div>
+            
+            <div class="navbar-end w-auto max-w-sm bg-white py-3 px-7 rounded-[50px] hidden lg:block">
+                <input type="text" name="" id="" placeholder="Search here">
+                <i class="fa-solid fa-magnifying-glass float-right text-xl text-desc"></i>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
