--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
     </script>
 
 </head>
-<body>
+<body style="font-family: 'Lato', sans-serif;">
     <header class="max-w-[1144px] mx-auto">
         <!-- nav bar -->
         <div class="navbar lg:grid grid-cols-3 md:bg-common-pink px-4 lg:px-12 lg:py-7 rounded-[600px] my-5 lg:my-12 lg:mx-0">
             <div class="navbar-center hidden lg:flex p-0">
                 <ul class="menu menu-horizontal md:text-white md:text-lg p-0">
-                    <li><a class="px-0 mr-5">Home</a></li>
-                    <li><a class="px-0 mr-5">About Us</a></li>
-                    <li><a class="px-0 mr-5">Shop</a></li>
-                    <li><a class="px-0">All Fruits</a></li>
+                    <li><a class="px-0 py-0 mr-5">Home</a></li>
+                    <li><a class="px-0 py-0 mr-5">About Us</a></li>
+                    <li><a class="px-0 py-0 mr-5">Shop</a></li>
+                    <li><a class="px-0 py-0">All Fruits</a></li>
                 </ul>
             </div>
             <div class="navbar-start justify-between w-full lg:w-auto">     
@@ -48,7 +48,7 @@
                 </a>
                 <div class="dropdown dropdown-end">
                     <label tabindex="0" class=" lg:hidden">
-                        <i class="fa-solid fa-bars fa-2x md:text-white  "></i>
+                        <i class="fa-solid fa-bars md:fa-2x md:text-white  "></i>
                     </label>
                     <ul tabindex="0" class="menu menu-sm dropdown-content w-52 shadow bg-base-100 rounded-box">
                         <li><a>Home</a></li>
@@ -65,6 +65,91 @@
             </div>
         </div>
     </header>
+    <main class="max-w-[1144px] mx-auto">
+        <!-- carousel -->
+        <div class="carousel max-w-full rounded-lg lg:rounded-none mx-4 md:mx-auto">
+            <!-- first-slide -->
+            <div id="slide1" class="carousel-item relative w-full">
+                <img src="images/banner1.png" class="w-full z-10 "/>
+                <div class="absolute w-full h-full bg-gradient-to-b from-slate-800 to-transparent z-20"></div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-1 right-1 md:left-5 md:right-5 top-1/2 z-50">
+                    <a href="#slide4" class="btn btn-circle bg-black text-white border-none text-xs">❮</a>
+                    <a href="#slide2" class="btn btn-circle bg-black text-white border-none text-xs">❯</a>
+                </div>
+                <!-- carousel-content -->
+                <div class="absolute z-40 text-white h-full w-full">
+                    <div class="flex flex-col justify-center items-center h-full space-y-3 md:space-y-6 ">
+                        <h1 class="text-2xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your <br> doorstep</h1>
+                        <p class="text-xs md:text-xl">We supply highly quality organic products</p>
+                        <button class="bg-common-pink border-none text-white text-base md:text-xl md:font-extrabold rounded-lg px-4 py-1 md:py-5 md:px-7">Shop Now</button>
+                    </div>
+                </div>
+            </div>
+            <!-- 2nd slide -->
+            <div id="slide2" class="carousel-item relative w-full">
+                <img src="images/banner2.png" class="w-full z-10 " />
+                <div class="absolute w-full h-full bg-gradient-to-b from-slate-800 to-transparent z-20"></div>
+                <div
+                    class="absolute flex justify-between transform -translate-y-1/2 left-1 right-1 md:left-5 md:right-5 top-1/2 z-50">
+                    <a href="#slide1" class="btn btn-circle bg-black text-white border-none text-xs">❮</a>
+                    <a href="#slide3" class="btn btn-circle bg-black text-white border-none text-xs">❯</a>
+                </div>
+                <!-- carousel-content -->
+                <div class="absolute z-40 text-white h-full w-full">
+                    <div class="flex flex-col justify-center items-center h-full space-y-3 md:space-y-6 ">
+                        <h1 class="text-2xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your <br> doorstep
+                        </h1>
+                        <p class="text-xs md:text-xl">We supply highly quality organic products</p>
+                        <button
+                            class="bg-common-pink border-none text-white text-base md:text-xl md:font-extrabold rounded-lg px-4 py-1 md:py-5 md:px-7">Shop
+                            Now</button>
+                    </div>
+                </div>
+            </div>
+            <!-- 3rd slide -->
+            <div id="slide3" class="carousel-item relative w-full">
+                <img src="images/banner3.png" class="w-full z-10 " />
+                <div class="absolute w-full h-full bg-gradient-to-b from-slate-800 to-transparent z-20"></div>
+                <div
+                    class="absolute flex justify-between transform -translate-y-1/2 left-1 right-1 md:left-5 md:right-5 top-1/2 z-50">
+                    <a href="#slide2" class="btn btn-circle bg-black text-white border-none text-xs">❮</a>
+                    <a href="#slide4" class="btn btn-circle bg-black text-white border-none text-xs">❯</a>
+                </div>
+                <!-- carousel-content -->
+                <div class="absolute z-40 text-white h-full w-full">
+                    <div class="flex flex-col justify-center items-center h-full space-y-3 md:space-y-6 ">
+                        <h1 class="text-2xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your <br> doorstep
+                        </h1>
+                        <p class="text-xs md:text-xl">We supply highly quality organic products</p>
+                        <button
+                            class="bg-common-pink border-none text-white text-base md:text-xl md:font-extrabold rounded-lg px-4 py-1 md:py-5 md:px-7">Shop
+                            Now</button>
+                    </div>
+                </div>
+            </div>
+            <!-- 4th slide -->
+            <div id="slide4" class="carousel-item relative w-full">
+                <img src="images/banner4.png" class="w-full z-10 " />
+                <div class="absolute w-full h-full bg-gradient-to-b from-slate-800 to-transparent z-20"></div>
+                <div
+                    class="absolute flex justify-between transform -translate-y-1/2 left-1 right-1 md:left-5 md:right-5 top-1/2 z-50">
+                    <a href="#slide3" class="btn btn-circle bg-black text-white border-none text-xs">❮</a>
+                    <a href="#slide1" class="btn btn-circle bg-black text-white border-none text-xs">❯</a>
+                </div>
+                <!-- carousel-content -->
+                <div class="absolute z-40 text-white h-full w-full">
+                    <div class="flex flex-col justify-center items-center h-full space-y-3 md:space-y-6 ">
+                        <h1 class="text-2xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your <br> doorstep
+                        </h1>
+                        <p class="text-xs md:text-xl">We supply highly quality organic products</p>
+                        <button
+                            class="bg-common-pink border-none text-white text-base md:text-xl md:font-extrabold rounded-lg px-4 py-1 md:py-5 md:px-7">Shop
+                            Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
