added meet section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </head>
 <body style="font-family: 'Lato', sans-serif;">
-    <header class="max-w-[1144px] mx-auto">
+    <header class="max-w-[1440px] mx-auto">
         <!-- nav bar -->
         <div class="navbar lg:grid grid-cols-3 md:bg-common-pink px-4 lg:px-12 lg:py-7 lg:rounded-[600px] my-5 lg:my-12 lg:mx-0">
             <div class="navbar-center hidden lg:flex p-0">
@@ -65,14 +65,14 @@
             </div>
         </div>
     </header>
-    <main class="max-w-[1144px] mx-auto">
+    <main class="max-w-[1440px] mx-auto">
         <!-- carousel -->
-        <section class="">
+        <section>
             <div class="carousel max-w-full rounded-lg lg:rounded-none mx-4 lg:mx-auto">
                 <!-- first-slide -->
                 <div id="slide1" class="carousel-item relative w-full">
                     <img src="images/banner1.png" class="w-full z-10 " />
-                    <div class="absolute w-full h-full bg-gradient-to-b from-slate-800 to-transparent z-20"></div>
+                    <div class="absolute w-full h-full bg-gradient-to-b from-slate-900 to-transparent z-20"></div>
                     <div
                         class="absolute flex justify-between transform -translate-y-1/2 left-1 right-1 md:left-5 md:right-5 top-1/2 z-50">
                         <a href="#slide4" class="btn btn-circle bg-black text-white border-none text-xs">❮</a>
@@ -304,6 +304,71 @@
             <button
                 class=" bg-common-pink border-none text-white text-base md:text-xl md:font-extrabold rounded-lg px-4 py-1 md:py-5 md:px-7">Shop
                 All</button>
+        </section>
+        <!-- meet section -->
+        <section class="mt-32 mx-6 lg:mx-auto">
+            <div class="hero h-auto p-6 lg:h-[690px] w-auto"
+                style="background-image: url(images/team.png);
+                background-color: rgba(0, 0, 0, 0.534); background-repeat: no-repeat; background-size: cover;
+                background-blend-mode: multiply;">
+                <div class=" text-center">
+                    <div class="">
+                        <h1 class="md:mb-5 text-xl md:text-3xl lg:text-5xl text-white font-bold">Meet the team section</h1>
+                        <p class="mb-5 text-white max-w-2xl mx-auto text-sm md:text-base">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
+                        making it over 2000 years old.</p>
+                    </div>
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 md:gap-5 lg:gap-32 mt-12">
+                        <!-- member-1 -->
+                        <div class="text-white flex flex-col items-center">
+                            <img src="images/member1.png" alt="">
+                            <h3 class="text-2xl font-bold mt-8">Awlad Hossain</h3>
+                            <p>Fruits Expert</p>
+                            <div class="flex gap-3 mt-4">
+                                <a href=""><i class="fa-brands fa-facebook-f bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin-in bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                            </div>
+                        </div>
+                        <!-- member-2 -->
+                        <div class="text-white flex flex-col items-center mt-5">
+                            <img src="images/member2.png" alt="">
+                            <h3 class="text-2xl font-bold mt-8">Safia Chowdhury</h3>
+                            <p>Fruits Expert</p>
+                            <div class="flex gap-3 mt-4">
+                                <a href=""><i class="fa-brands fa-facebook-f bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin-in bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                            </div>
+                        </div>
+                        <!-- member-3 -->
+                        <div class="text-white flex flex-col items-center mt-5">
+                            <img src="images/member3.png" alt="">
+                            <h3 class="text-2xl font-bold mt-8">Rokib Hossain</h3>
+                            <p>Fruits Expert</p>
+                            <div class="flex gap-3 mt-4">
+                                <a href=""><i class="fa-brands fa-facebook-f bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin-in bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                            </div>
+                        </div>
+                        <!-- member-4 -->
+                        <div class="text-white flex flex-col items-center mt-5">
+                            <img src="images/member4.png" alt="">
+                            <h3 class="text-2xl font-bold mt-8" >Chaity</h3>
+                            <p>Fruits Expert</p>
+                            <div class="flex gap-3 mt-4">
+                                <a href=""><i class="fa-brands fa-facebook-f bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin-in bg-common-pink w-6 h-6 flex items-center justify-center rounded-[50%]"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- why section -->
+        <section >
+            <h1></h1>
         </section>
     </main>
     <!-- alert -->
