--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             </div>
         </div>
     </header>
-    <main class="max-w-[1440px] mx-auto">
+    <main class="max-w-[1440px] mx-auto relative">
         <!-- carousel -->
         <section>
-            <div class="carousel max-w-full rounded-lg lg:rounded-none mx-4 lg:mx-auto">
+            <div class="carousel max-w-full rounded-lg lg:rounded-none mx-4 lg:mx-auto ">
                 <!-- first-slide -->
                 <div id="slide1" class="carousel-item relative w-full">
                     <img src="images/banner1.png" class="w-full z-10 " />
@@ -156,7 +156,29 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="hidden lg:grid lg:text-center lg:absolute lg:w-[1196px] lg:grid-cols-5 lg:gap-[90px] lg:py-12 lg:px-16 lg:bg-white lg:z-[80] lg:transform lg:left-1/2 lg:-translate-x-1/2 lg:top-[520px] lg:rounded-lg">
+                    <div >
+                        <img src="images/fruit1.png" class="w-[146px] h-[110px]" alt="">
+                        <p class="text-desc">Strawberry</p>
+                    </div>
+                    <div>
+                        <img src="images/fruit2.png" class="w-[146px] h-[110px]" alt="">
+                        <p class="text-desc">Orange</p>
+                    </div>
+                    <div>
+                        <img src="images/fruit3.png" class="w-[146px] h-[110px]" alt="">
+                        <p class="text-desc">Mango</p>
+                    </div>
+                    <div>
+                        <img src="images/fruit4.png" class="w-[146px] h-[110px]" alt="">
+                        <p class="text-desc">Strawberry</p>
+                    </div>
+                    <div>
+                        <img src="images/fruit5.png" alt="">
+                        <p class="text-desc">Mango</p>
+                    </div>
+                </div>
+            </div>  
         </section>
         <!-- Deal -->
         <section class="mt-7 mx-6 lg:mx-auto lg:mt-60 text-center">
@@ -367,10 +389,101 @@
             </div>
         </section>
         <!-- why section -->
-        <section >
-            <h1></h1>
+        <section class="mt-9 md:mt-24 lg:mt-32 mx-6 lg:mx-auto">
+            <h1 class="text-xl md:text-2xl lg:text-5xl font-extrabold text-center">Why Choose Us</h1>
+            <p class="text-desc text-center mt-2 md:mt-6 lg:max-w-[615px] lg:mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old.</p>
+            <!-- container -->
+            <div class="flex flex-col lg:flex-row lg:justify-between lg:gap-12 mt-6 lg:mt-12">
+                <!-- first col -->
+                <div class="flex flex-col-reverse lg:flex-row lg:justify-between lg:w-2/3 gap-12 ">
+                    <!-- first col content -->
+                    <div class="first  lg:w-1/2 mb-5 lg:mb-0 mx-8 lg:mx-0">
+                        <div class="flex flex-col items-center lg:flex-row gap-6 mb-5">
+                            <i class="fa-solid fa-user-group fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
+                            <div class="text-center lg:text-left space-y-4">
+                                <h3 class="text-2xl font-extrabold">Dedicated Team</h3>
+                                <hr>
+                                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                        <div class="flex flex-col items-center lg:flex-row gap-6 mb-5">
+                            <i class="fa-regular fa-heart fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
+                            <div class="text-center lg:text-left space-y-4">
+                                <h3 class="text-2xl font-extrabold">Fresh is Best</h3>
+                                <hr>
+                                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                        <div class="flex flex-col items-center lg:flex-row gap-6 mb-5">
+                            <i class="fa-solid fa-gifts fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
+                            <div class="text-center lg:text-left space-y-4">
+                                <h3 class="text-2xl font-extrabold">Gift Certificates</h3>
+                                <hr>
+                                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- pic -->
+                    <div class="pic ">
+                        <img src="images/whychoose1.png" alt="" class="w-full">
+                    </div>
+                </div>
+                <!-- 2nd col -->
+                <div class="second lg:w-1/3 mx-8 lg:mx-0">
+                    <div class="flex flex-col items-center lg:flex-row-reverse gap-6 mb-5">
+                        <i class="fa-solid fa-carrot fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
+                        <div class="text-center lg:text-right space-y-4">
+                            <h3 class="text-2xl font-extrabold">Integrated Supplier</h3>
+                            <hr>
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-center lg:flex-row-reverse gap-6 mb-5" >
+                        <i class="fa-solid fa-ice-cream fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
+                        <div class="text-center lg:text-right space-y-4">
+                            <h3 class="text-2xl font-extrabold">Sustainable Practice</h3>
+                            <hr>
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-center lg:flex-row-reverse gap-6 mb-5">
+                        <i class="fa-solid fa-thumbs-up fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
+                        <div class="text-center lg:text-right space-y-4">
+                            <h3 class="text-2xl font-extrabold">The Benefits Only</h3>
+                            <hr>
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
+    <footer class="footer footer-center py-10 md:py-20 lg:py-36 bg-black text-base-content md:mt-10 lg:mt-32">
+        <div class="flex gap-2 lg:gap-4 items-center">
+            <img src="images/logo.png" alt="" class="w-9 lg:w-auto">
+            <h2 class="text-white text-2xl lg:text-5xl font-bold">Fruit Burst</h2>
+        </div>
+        <div class="flex flex-wrap justify-center gap-10 lg:gap-14 text-white text-sm md:text-lg font-semibold">
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Shop</a>
+            <a class="link link-hover">All Fruits</a>
+            <a class="link link-hover">Support</a>
+            <a class="link link-hover">My Account</a>
+        </div>
+        <div>
+            <!-- icons -->
+            <div class="grid  grid-flow-col gap-6 lg:gap-10 text-white text-xl lg:text-3xl">
+                <a href=""><i class="fa-brands fa-twitter "></i></a>
+                <a href=""><i class="fa-brands fa-facebook text-blue-500 "></i></a>
+                <a href=""><i class="fa-brands fa-youtube text-red-700 "></i></a>
+                <a href=""><i class="fa-brands fa-linkedin-in "></i></a>
+                <a href=""><i class="fa-brands fa-instagram "></i></a>
+                <a href=""><i class="fa-brands fa-apple"></i></a>
+            </div>
+        </div>
+    </footer>
     <!-- alert -->
     <div class="hidden alert w-auto bg-white fixed  transform top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2">
         <!-- first card -->
