fixed hr in why section

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                             <i class="fa-solid fa-user-group fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
                             <div class="text-center lg:text-left space-y-4">
                                 <h3 class="text-2xl font-extrabold">Dedicated Team</h3>
-                                <hr>
+                                <hr class="border border-black w-[100px] mx-auto lg:mx-0">
                                 <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                             </div>
                         </div>
@@ -411,7 +411,7 @@
                             <i class="fa-regular fa-heart fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
                             <div class="text-center lg:text-left space-y-4">
                                 <h3 class="text-2xl font-extrabold">Fresh is Best</h3>
-                                <hr>
+                                <hr class="border border-black w-[100px] mx-auto lg:mx-0">
                                 <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                             </div>
                         </div>
@@ -419,7 +419,7 @@
                             <i class="fa-solid fa-gifts fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
                             <div class="text-center lg:text-left space-y-4">
                                 <h3 class="text-2xl font-extrabold">Gift Certificates</h3>
-                                <hr>
+                                <hr class="border border-black w-[100px] mx-auto lg:mx-0">
                                 <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                             </div>
                         </div>
@@ -435,7 +435,7 @@
                         <i class="fa-solid fa-carrot fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
                         <div class="text-center lg:text-right space-y-4">
                             <h3 class="text-2xl font-extrabold">Integrated Supplier</h3>
-                            <hr>
+                            <hr class="border border-black w-[100px] mx-auto lg:mx-0 lg:relative lg:left-[73%]">
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
@@ -443,7 +443,7 @@
                         <i class="fa-solid fa-ice-cream fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
                         <div class="text-center lg:text-right space-y-4">
                             <h3 class="text-2xl font-extrabold">Sustainable Practice</h3>
-                            <hr>
+                            <hr class="border border-black w-[100px] mx-auto lg:mx-0 lg:relative lg:left-[73%]">
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
@@ -451,7 +451,7 @@
                         <i class="fa-solid fa-thumbs-up fa-2x w-[100px] h-[100px] lg:h-[70px] rounded-[50%] p-1 bg-gray-200 flex justify-center  items-center"></i>
                         <div class="text-center lg:text-right space-y-4">
                             <h3 class="text-2xl font-extrabold">The Benefits Only</h3>
-                            <hr>
+                            <hr class="border border-black w-[100px] mx-auto lg:mx-0 lg:relative lg:left-[73%]">
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
