--- a/index.html
+++ b/index.html
@@ -241,7 +241,39 @@
                             <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
                         </div>
-                        <a href="" class="text-lg font-bold text-common-pink">Details</a>
+                        <!-- Open the modal using ID.showModal() method -->
+                        <a href="#" class="text-lg font-bold text-common-pink" onclick="my_modal_5.showModal()">Details</a>
+                        <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                            <form method="dialog" class="modal-box">
+                                <div class="card bg-base-100 border border-gray-300  pt-10">
+                                    <figure class="">
+                                        <img src="images/fruit6.png" alt="Shoes" class="" />
+                                    </figure>
+                                    <div class="card-body items-center text-center space-y-4">
+                                        <h1 class="text-desc text-4xl font-extrabold">Apples</h1>
+                                        <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                        <!-- ratings -->
+                                        <div class="rating rating-md rating-half">
+                                            <input type="radio" name="rating-10" class="rating-hidden" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" checked />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                        </div>
+                                        <div class="flex gap-2">
+                                            <button class="btn bg-transparent border border-common-pink text-common-pink">Close</button>
+                                            <button class="btn text-white bg-common-pink">Buy Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </dialog>
                     </div>
                 </div>
                 <!-- 2nd card -->
@@ -267,7 +299,39 @@
                             <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
                         </div>
-                        <a href="" class="text-lg font-bold text-common-pink">Details</a>
+                        <!-- Open the modal using ID.showModal() method -->
+                        <a href="#" class="text-lg font-bold text-common-pink bg-transparent border-none" onclick="my_modal_6.showModal()">Details</a>
+                        <dialog id="my_modal_6" class="modal modal-bottom sm:modal-middle">
+                            <form method="dialog" class="modal-box">
+                                <div class="card bg-base-100 border border-gray-300  pt-10">
+                                    <figure class="">
+                                        <img src="images/fruit7.png" alt="Shoes" class="" />
+                                    </figure>
+                                    <div class="card-body items-center text-center space-y-4">
+                                        <h1 class="text-desc text-4xl font-extrabold">Orange</h1>
+                                        <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                        <!-- ratings -->
+                                        <div class="rating rating-md rating-half">
+                                            <input type="radio" name="rating-10" class="rating-hidden" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" checked />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                        </div>
+                                        <div class="flex gap-2">
+                                            <button class="btn bg-transparent border border-common-pink text-common-pink">Close</button>
+                                            <button class="btn text-white bg-common-pink">Buy Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </dialog>
                     </div>
                 </div>
                 <!-- 3rd card -->
@@ -278,7 +342,7 @@
                     <div class="card-body items-center text-center space-y-4">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <hr class=" w-full">
-                        <p class="text-desc">Apples</p>
+                        <p class="text-desc">Red Dragon</p>
                         <!-- ratings -->
                         <div class="rating rating-md rating-half">
                             <input type="radio" name="rating-10" class="rating-hidden" />
@@ -293,7 +357,39 @@
                             <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
                         </div>
-                        <a href="" class="text-lg font-bold text-common-pink">Details</a>
+                        <a href="#" class="text-lg font-bold text-common-pink bg-transparent border-none"
+                            onclick="my_modal_7.showModal()">Details</a>
+                        <dialog id="my_modal_7" class="modal modal-bottom sm:modal-middle">
+                            <form method="dialog" class="modal-box">
+                                <div class="card bg-base-100 border border-gray-300  pt-10">
+                                    <figure class="">
+                                        <img src="images/fruit8.png" alt="Shoes" class="" />
+                                    </figure>
+                                    <div class="card-body items-center text-center space-y-4">
+                                        <h1 class="text-desc">Red Dragon</h1>
+                                        <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                        <!-- ratings -->
+                                        <div class="rating rating-md rating-half">
+                                            <input type="radio" name="rating-10" class="rating-hidden" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" checked />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                        </div>
+                                        <div class="flex gap-2">
+                                            <button class="btn bg-transparent border border-common-pink text-common-pink">Close</button>
+                                            <button class="btn text-white bg-common-pink">Buy Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </dialog>
                     </div>
                 </div>
                 <!-- 4th card -->
@@ -304,7 +400,7 @@
                     <div class="card-body items-center text-center space-y-4">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <hr class=" w-full">
-                        <p class="text-desc">Apples</p>
+                        <p class="text-desc text-4xl font-extrabold">Banana</p>
                         <!-- ratings -->
                         <div class="rating rating-md rating-half">
                             <input type="radio" name="rating-10" class="rating-hidden" />
@@ -319,7 +415,39 @@
                             <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
                         </div>
-                        <a href="" class="text-lg font-bold text-common-pink">Details</a>
+                        <a href="#" class="text-lg font-bold text-common-pink bg-transparent border-none"
+                            onclick="my_modal_8.showModal()">Details</a>
+                        <dialog id="my_modal_8" class="modal modal-bottom sm:modal-middle">
+                            <form method="dialog" class="modal-box">
+                                <div class="card bg-base-100 border border-gray-300  pt-10">
+                                    <figure class="">
+                                        <img src="images/fruit9.png" alt="Shoes" class="" />
+                                    </figure>
+                                    <div class="card-body items-center text-center space-y-4">
+                                        <h1 class="text-desc  text-4xl font-extrabold">Banana</h1>
+                                        <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                        <!-- ratings -->
+                                        <div class="rating rating-md rating-half">
+                                            <input type="radio" name="rating-10" class="rating-hidden" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" checked />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
+                                            <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
+                                        </div>
+                                        <div class="flex gap-2">
+                                            <button class="btn bg-transparent border border-common-pink text-common-pink">Close</button>
+                                            <button class="btn text-white bg-common-pink">Buy Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </dialog>
                     </div>
                 </div>
             </div>
@@ -484,35 +612,7 @@
             </div>
         </div>
     </footer>
-    <!-- alert -->
-    <div class="hidden alert w-auto bg-white fixed  transform top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2">
-        <!-- first card -->
-        <div class="card bg-base-100 p-12">
-            <figure class="">
-                <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
-            </figure>
-            <div class="card-body items-center text-center space-y-4">
-                <p class="text-desc">Apples</p>
-                <!-- ratings -->
-                <div class="rating rating-lg rating-half">
-                    <input type="radio" name="rating-10" class="rating-hidden" />
-                    <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
-                    <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
-                    <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" checked />
-                    <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
-                    <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
-                    <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
-                    <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
-                    <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
-                    <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-1" />
-                    <input type="radio" name="rating-10" class="bg-common-pink mask mask-star-2 mask-half-2" />
-                </div>
-            </div>
-            <div>
-                <button class="btn btn-sm">Deny</button>
-                <button class="btn btn-sm btn-primary">Accept</button>
-            </div>
-        </div>
-    </div>
+
+    
 </body>
 </html>
