--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                         <img src="images/fruit6.png" alt="Shoes" class="" />
                                     </figure>
                                     <div class="card-body items-center text-center space-y-4">
-                                        <h1 class="text-desc text-4xl font-extrabold">Apples</h1>
+                                        <h1 class="text-black text-4xl font-extrabold">Apples</h1>
                                         <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                                         <!-- ratings -->
                                         <div class="rating rating-md rating-half">
@@ -284,7 +284,7 @@
                     <div class="card-body items-center text-center space-y-4">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <hr class=" w-full">
-                        <p class="text-desc">Apples</p>
+                        <p class="text-desc">Orange</p>
                         <!-- ratings -->
                         <div class="rating rating-md rating-half">
                             <input type="radio" name="rating-10" class="rating-hidden" />
@@ -308,7 +308,7 @@
                                         <img src="images/fruit7.png" alt="Shoes" class="" />
                                     </figure>
                                     <div class="card-body items-center text-center space-y-4">
-                                        <h1 class="text-desc text-4xl font-extrabold">Orange</h1>
+                                        <h1 class="text-black text-4xl font-extrabold">Orange</h1>
                                         <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                                         <!-- ratings -->
                                         <div class="rating rating-md rating-half">
@@ -366,7 +366,7 @@
                                         <img src="images/fruit8.png" alt="Shoes" class="" />
                                     </figure>
                                     <div class="card-body items-center text-center space-y-4">
-                                        <h1 class="text-desc">Red Dragon</h1>
+                                        <h1 class="text-black text-4xl font-extrabold">Red Dragon</h1>
                                         <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                                         <!-- ratings -->
                                         <div class="rating rating-md rating-half">
@@ -400,7 +400,7 @@
                     <div class="card-body items-center text-center space-y-4">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <hr class=" w-full">
-                        <p class="text-desc text-4xl font-extrabold">Banana</p>
+                        <p class="text-desc">Banana</p>
                         <!-- ratings -->
                         <div class="rating rating-md rating-half">
                             <input type="radio" name="rating-10" class="rating-hidden" />
@@ -424,7 +424,7 @@
                                         <img src="images/fruit9.png" alt="Shoes" class="" />
                                     </figure>
                                     <div class="card-body items-center text-center space-y-4">
-                                        <h1 class="text-desc  text-4xl font-extrabold">Banana</h1>
+                                        <h1 class="text-black text-4xl font-extrabold">Banana</h1>
                                         <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                                         <!-- ratings -->
                                         <div class="rating rating-md rating-half">
